# OpenLRR

./: .clang-format  .gitmodules  .travis.yml  CMakeLists.txt  licence.txt  readme.md  travis.yml
src/: main.cpp  notes.md  utils.h
src/engine/: Engine.cpp  Engine.h
src/engine/graphics/: graphics_backend.h  vulkan.cpp  vulkan.h
src/engine/graphics/shaders/: basic.glsl.frag  basic.glsl.vert
src/engine/graphics/vk/: vulkan.cpp  vulkan.h  vulkan_bootstrap.cpp  vulkan_bootstrap.h  vulkan_command.cpp  vulkan_data.cpp  vulkan_data.h  vulkan_internals.h  vulkan_pipeline.cpp  vulkan_pipeline.h
src/engine/platform/: platform_glfw.cpp  platform_glfw.h
src/game/: game.cpp  game.h  game_graphics.h  geometry.h  idx.cpp  idx.h  level.cpp  level.h  levlGen.cpp
